@@ -217,13 +217,13 @@ DIST texlive-module-web.doc-2011.tar.xz 11512 SHA256 a7af7fa3555a2f3e5461d5379d9
 DIST texlive-module-web.doc-2012.tar.xz 11508 SHA256 c0023456ff68d89ecccf5d368c8bb19a4e90baccdda814bfe332213031d09440 SHA512 664c1b1579bfd346c6dd14f1df5919105e945e8f7e29fb0a49158e2fb9b8fc33432d6b206bdda7560991d82f577dea7decd52378405e0fec75c450addec2d765 WHIRLPOOL a546a7a57723820bb68b1152b62656e976af59390013091cfc00e9635d6bfbe223b3848f691aa7d443f342f236f8c1b126b67be6df801379ea2ecdbb23319cac
 EBUILD texlive-core-2011-r6.ebuild 11149 SHA256 3b6bdfe51012669ca84e5e0d37ad43e02084e929e3bafac5d950fa0367d7b5bc SHA512 87bf47bf94aef45b152998e46f662f1586ac114fb4d7aaf941516c3e4f8831e1b4a78a321841212c03d197a8e1f68a5da4b326bc683a10bfa8fa48ed3b2f25fc WHIRLPOOL 5fa47d7b4b8ffb866fac49cc7f66ceac66d863a0b4530def303824fea4176048c0db9d9971b4a2bc5cc25d842f1e5a523ab46e346e4c7a7892b03d3a2b08fa70
 EBUILD texlive-core-2011-r7.ebuild 11149 SHA256 0ef9ab1dd38f2b97e46663d396a290eebcc9763dce04acdd528e204265c023e0 SHA512 f8c0a135efecdcae5437cc0d0a8c82b0bbd06dff5cc59529fa0794e586e2da194f12e81cdcc20211ac2e086910b06d99aad12d6cdf18fa6c601a832f5975cc08 WHIRLPOOL 06c969976537f12354767f7fb69f9782d6e11d2b1025798fb789cd80f467387d9abf3fc5a192056a0cf0f727766ad73efc6d530be0343f5bdbf835787c1bf30a
-EBUILD texlive-core-2012.ebuild 11495 SHA256 aea0fc5a2a2c29f4854b21bc3231d372a3e5073687e0977acbb027f5b085e256 SHA512 6433fb4b11b7968287d807e40133361b757368b94ffa2df3f3e01a05e0383716f589ff3712d39b70f5d82003e41da696a3566abd1b1b26a05abe3bb696597833 WHIRLPOOL 55d73f3031dd841dcb61f65d70c4dd0f624ad0c437aba525af650ac95ea67046170cf2d6f2e5adfd14276017f89e784e9670b21d40fe6da6075ee36217bd1b2e
-MISC ChangeLog 29755 SHA256 eaa9682cf2d563ac45a0f05a25f3fe42b60eb7161007e0f2a0575f93be1b115a SHA512 a0bc747191c69c3cad1e100280c737431f847630540a36f4063769e1d953b722e83a49d001729faf5d59885eef78733fdc93ce1da9439d9039da277724cf3c6d WHIRLPOOL 96cd928ab7a2002d731fafb30ee4177cd43c9a46fefec0f998cae73f6341390c9bcc9ef9a2e33ed9b7dd73537d35613677100b2137fced2b3ecbf69c2938e360
+EBUILD texlive-core-2012.ebuild 11586 SHA256 ca144801b89d6c38c7cc903ed72f11e771a65ebd5c34e2dbbf1aaac204d47191 SHA512 db11699cacbb9af78e2c11c1fd8c5bf4264d1efc6dbc8250de3ed5cefc6918d5f118fad7607f20748ef2dca04d94c1f0ac8c003d710c18257864d8b7eff91966 WHIRLPOOL f672afb1bcf06a0dea7f139adff00720c55c02b1dfc3a29d020347386707725ab9b6ad25150489fd719247c1d72c231f59199492729c5294292554a3679a3d29
+MISC ChangeLog 29902 SHA256 1a94518cc3467e8f8e86c1b54cbc87fec0cad5a3f9e656f0c34f51d71a51e169 SHA512 3969106bbbe8652100db50c17dd16174fa0ab0f798e8cfbbcff2e7e2a8ded15be7079cd2bf7624e4f86271d0e7aed97b4f142aefbc32ee8c72fc23379340fed9 WHIRLPOOL 40528da476dd836b532ec950c62e7dc0dcf3b485ecf04eeab8b764c7f0455ae4b734ae015e52ac9dcad2e6b836832276921fa2ebc7dfb110966213f7c2b28eb8
 MISC metadata.xml 448 SHA256 ddaca86e81c2eaf01ff5e7d613777a6c2231ed0f09646cb303e23b0e90c08d02 SHA512 c414f498afa7c6effabb5c21f85c1fca64271e9d8a429e15e86661c8b7f12adac0beb6b90c74a7309cfe9d20e639c818dc2a2045b4c315c0924583f0e71dca4b WHIRLPOOL d0537703ae9ac1a072795b05ee90b1e06d4f1dcb61b0e5adbac05f91db442a44846f909e63840518790d765c71b9a6314f58602d1489cb482ca7b7826cd88ee1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEAREIAAYFAlATscwACgkQX3X2B8XHTok+oACghA4fMIZmw/INJTv969zMJiJ1
-IlYAoItPWaqcap6BddboPS/n3i9dZ4oW
-=1TKB
+iEYEAREIAAYFAlCK0bYACgkQX3X2B8XHTonO5wCfZVKI1ponkt5FWa66tIjFCu1x
+vAAAnA4CozStg6/4Vil7sJjM59pNrz0E
+=R3N6
 -----END PGP SIGNATURE-----
